feat(ci): add automated unittest workflow
Squashed commit of the following:

commit 5de4fb61ac1bf6b6bd89903cabecabfc3d645eb1
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 11:06:54 2023 +0100

    feat(ci): add unittest status badge

commit c0395ee28b5ccad5a35887e25267060a7065cba8
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 11:00:19 2023 +0100

    refactor(ci): rename workflow

commit 2a85423ef96b879d953e7ca94dc0460127201afd
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 10:59:42 2023 +0100

    fix(ci): set job name, add spacing

commit 8f36595aec5ea75e13ad1c64b24f24c7b3475520
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 10:56:56 2023 +0100

    refactor(ci): created coverage build profile

commit 9d2a2e205852c7d45574e877d828489125e65f09
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 10:48:55 2023 +0100

    refactor(ci): test all modules

commit 4ada89f639e4ffcbb2ffa0dafdf9897dcf5c41f8
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 10:29:17 2023 +0100

    fix(ci): adjust workflow permissions

commit 0649aaebe660f7770dde4125cde35a5a701e5100
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Wed Aug 16 10:22:56 2023 +0100

    refactor(ci): revised unit test workflow

commit 4f9565fb5c7da9e502572cc2913cae632a69feee
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Tue Aug 15 17:36:27 2023 +0100

    fix(ci): change path to surefire reports

commit 1076dccc0977cac6ed0ee886dd6092034f051287
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Tue Aug 15 17:30:57 2023 +0100

    refactor(ci): focus on unit test execution only

commit be268daa9f9f97bffddeeb93e9d0d2f43eba359d
Author: Steve Roberts <steve.roberts@essarsoftware.co.uk>
Date:   Tue Aug 15 17:04:04 2023 +0100

    refactor(ci): add maven caching

commit 60b58ae133550930987a66fdbe04fd

--- a/engine-core/pom.xml
+++ b/engine-core/pom.xml
@@ -34,10 +34,28 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <!-- Coverage profile adding extra instrumentation for test analysis-->
+    <profile>
+      <id>coverage</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
