--- a/engine-parent/pom.xml
+++ b/engine-parent/pom.xml
@@ -22,6 +22,8 @@
     <build-helper.version>1.12</build-helper.version>
     <jacoco.plugin.version>0.8.8</jacoco.plugin.version>
     <javadoc.version>3.4.1</javadoc.version>
+    <pitest.plugin.version>1.14.3</pitest.plugin.version>
+    <pitest.junit5.plugin.version>1.2.0</pitest.junit5.plugin.version>
     <spring-boot.version>2.7.4</spring-boot.version>
   </properties>
 
@@ -88,9 +90,23 @@
                 <goal>check</goal>
               </goals>
               <configuration>
+                <haltOnFailure>false</haltOnFailure>
                 <rules>
-                  <rule>
+                  <!--<rule>
                     <element>BUNDLE</element>
+                    <limits>
+                      <limit>
+                        <counter>COMPLEXITY</counter>
+                        <value>COVEREDRATIO</value>
+                        <minimum>0.60</minimum>
+                      </limit>
+                    </limits>
+                  </rule>-->
+                  <rule>
+                    <element>PACKAGE</element>
+                    <includes>
+                      <include>uk.co.essarsoftware.par.cards</include>
+                    </includes>
                     <limits>
                       <limit>
                         <counter>COMPLEXITY</counter>
@@ -104,7 +120,36 @@
             </execution>
           </executions>
         </plugin>
-          
+        <plugin>
+          <groupId>org.pitest</groupId>
+          <artifactId>pitest-maven</artifactId>
+          <version>${pitest.plugin.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.pitest</groupId>
+              <artifactId>pitest-junit5-plugin</artifactId>
+              <version>${pitest.junit5.plugin.version}</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <execution>
+              <id>default-mutationCoverage</id>
+              <goals>
+                <goal>mutationCoverage</goal>
+              </goals>
+              <phase>test</phase>
+              <configuration>
+                <targetClasses>
+                  <param>uk.co.essarsoftware.par.cards.*</param>
+                </targetClasses>
+                <targetTests>
+                  <param>uk.co.essarsoftware.par.cards.*</param>
+                </targetTests>
+                <reportsDirectory>target/pitest</reportsDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
 
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
