--- a/engine-core/pom.xml
+++ b/engine-core/pom.xml
@@ -80,10 +80,10 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
           </plugin>
-          <!-- <plugin>
+          <plugin>
             <groupId>org.pitest</groupId>
             <artifactId>pitest-maven</artifactId>
-          </plugin> -->
+          </plugin>
         </plugins>
       </build>
     </profile>
