refactor: merge modules into engine-api
* Merge game into engine-api
* Merge players into engine-api
* Merge table into engine-api

--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
     <module>engine-parent</module>
     <module>actions</module>
     <module>cards</module>
-    <module>game</module>
-    <module>players</module>
-    <module>table</module>
+    <module>engine-api</module>
     <module>engine-core</module>
     <module>engine-events</module>
     <!--<module>engine-auth</module>-->
