--- a/actions/pom.xml
+++ b/actions/pom.xml
@@ -25,12 +25,7 @@
     </dependency>
     <dependency>
       <groupId>uk.co.essarsoftware.par</groupId>
-      <artifactId>players</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>uk.co.essarsoftware.par</groupId>
-      <artifactId>table</artifactId>
+      <artifactId>engine-api</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <!-- Test dependencies -->
