--- a/engine-api/pom.xml
+++ b/engine-api/pom.xml
@@ -8,10 +8,10 @@
     <relativePath>../engine-parent</relativePath>
   </parent>
 
-  <artifactId>players</artifactId>
+  <artifactId>engine-api</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>Prials and Runs Game Engine (players module)</name>
+  <name>Prials and Runs Game Engine (engine API module)</name>
   
   <dependencies>
     <dependency>
@@ -25,8 +25,12 @@
     </dependency>
     <!-- Test dependencies -->
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
