--- a/engine-events/pom.xml
+++ b/engine-events/pom.xml
@@ -23,16 +23,11 @@
       <artifactId>cards</artifactId>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>uk.co.essarsoftware.par</groupId>
-      <artifactId>game</artifactId>
+      <artifactId>engine-api</artifactId>
       <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>uk.co.essarsoftware.par</groupId>
-      <artifactId>players</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
+    </dependency> -->
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
